Fixing small UI bug on mobile in profile view

--- a/src/Hooli/wwwroot/css/site.css
+++ b/src/Hooli/wwwroot/css/site.css
@@ -737,6 +737,34 @@ footer {
     text-align: center;
 }
 
+.btn-primary:hover {
+    background: #fd7e23;
+}
+.btn-option:hover {
+    background: #CCC;
+    color: #333;
+}
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
 @media (max-width: 991px) {
     .hidden-mobile {
         display:none !important;
@@ -798,32 +826,8 @@ footer {
     .search-mobile input[type=search] {
         width: 280px;
     }
-    .btn-primary:hover {
-        background: #fd7e23;
-    }
-    .btn-option:hover {
-        background: #CCC;
-        color: #333;
-    }
-    .btn-file {
-        position: relative;
-        overflow: hidden;
-    }
-    .btn-file input[type=file] {
-        
-        position: absolute;
-        top: 0;
-        right: 0;
-        min-width: 100%;
-        min-height: 100%;
-        font-size: 100px;
-        text-align: right;
-        filter: alpha(opacity=0);
-        opacity: 0;
-        outline: none;
-        background: white;
-        cursor: inherit;
-        display: block;
+    .margin-top-mobile {
+        margin-top: 20px;
     }
 }
 
